--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -15,16 +15,15 @@
   <div class="container">
     <div class="form-area">
       <h1>Word Frequency Finder</h1>
-
       <div id="description-area">
         <h2>Paste your text below to find the word frequency.</h2>
       </div>
       <form action="" id="main-form">
         <div class="input-div">
-          <textarea id="main-text" placeholder="Enter your text here..." form="main-form" rows="25"></textarea>
+          <textarea id="main-input" placeholder="Enter your text here..." form="main-form" rows="25"></textarea>
         </div>
         <div class="btn-div">
-          <input type="button" class="btn" value="Add Your Button Text" onclick="">
+          <input type="button" class="btn" value="Add Your Button Text" onclick="convertCleanTextToArray();">
         </div>
       </form>
     </div>
